--- a/style.css
+++ b/style.css
@@ -20,11 +20,15 @@ body{
     width: 300px;
     height:450px;
     border-radius: 10px;
-    margin-left: 35%;
+    /* margin-left: 35%;
     margin-right: 35%;
-    margin-top: 7%;
+    margin-top: 7%; */
     box-shadow: 10px 10px 10px;
-    margin-top: 120px;
+    /* margin-top: 120px; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .input-box{
     width: 70%;
