--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+
+  
+
 body{
-    background: rgb(6, 56, 125);
-    font-family: Arial, Helvetica, sans-serif;
+    background: rgb(47, 45, 45);
 }
 .calculator-body{
     background: #fff;
@@ -23,12 +25,14 @@ body{
     /* margin-left: 35%;
     margin-right: 35%;
     margin-top: 7%; */
-    box-shadow: 10px 10px 10px;
+    /* box-shadow: -2px 2px 2px 2px #000; */
+    border: 1px solid rgb(233, 231, 231);
     /* margin-top: 120px; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-family: "Poppins",serif;
 }
 .input-box{
     width: 70%;
